fix de delay + plugins .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,20 @@ bind r source-file ~/.tmux.conf
 set -g prefix C-v
 set -g mouse on # habilita o mouse, dessa forma consigo dimensionar as panes com o mouse
 
+set -sg escape-time 0 # corrige o problema da demora ao pressionar ESC no neovim
+
 bind-key h select-pane -L # esquerda
 bind-key j select-pane -D # pra baixo
 bind-key k select-pane -U # pra cima
 bind-key l select-pane -R # direita
+
+# Para instalar plugins
+# reload das configs
+# <leader> + I (i maisculo)
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
