--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ set -g prefix C-v
 set -g mouse on # habilita o mouse, dessa forma consigo dimensionar as panes com o mouse
 
 set -sg escape-time 0 # corrige o problema da demora ao pressionar ESC no neovim
+set-option -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 bind-key h select-pane -L # esquerda
 bind-key j select-pane -D # pra baixo
@@ -20,4 +23,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '$HOME/.tmux/plugins/tpm/tpm'
